kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atms
  labels:
    name: atms
