kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atms-frontend-service
  namespace: atms
spec:
  selector:
    app: atms-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
